--- a/src/content/main/crafts.mdx
+++ b/src/content/main/crafts.mdx
@@ -1,12 +1,10 @@
 ## Codes
 
-<Gallery imgs={["messe.jpeg"]} />
-
 - EventKit [wip]
 - ThaiUI [wip]
 - Cluster.wiki [wip]
 - Contentgarten
-- MESSE
+- Molecular Encoded Storage for Space Exploration (MESSE)
 
 ## Contents
 
@@ -14,14 +12,15 @@
 - Chasing New Horizons
 - FutureTales Lab: Space Movement 2060
 
-## Communities and Collaborations
+## Communities
 
 - Garden Zero
 - Bangkok Art Council [wip]
 
-## Event-based Project
+## Event-based Projects
 
-<Gallery imgs={["sht7.jpeg", "bosh.webp"]} />
+![The 7th Stupid Hackathon in Thailand](/sht7.jpeg)
+**The 7th Stupid Hackathon in Thailand**
 
 ### Hackation & Competitions
 
@@ -44,8 +43,6 @@
 - Hacktoberfest Thailand Series (2019-Present)
 
 ### Arts and Lives
-
-<Gallery imgs={["forgotten.webp"]} />
 
 - Algorave [wip]
 - PDS Band Contest
