style: sticky things

--- a/src/content/main/stories.mdx
+++ b/src/content/main/stories.mdx
@@ -11,7 +11,7 @@ My name is Chayapatr (or Pub, for short). I am an editor-in-chief at [Spaceth.co
 - learned syntax and corpus lingustics at chulalongkorn university [[writeups](/e/ling)]
 - co-initiated [garden zero](/e/g0) hacker space
 - organized [bangkok open source hackathon](/e/bosh), a 2-month long hackathon to promote open source culture in thailand
-- run [a first half marathon](/e/hm)
+- run [my first half-marathon](/e/hm)
 - partnered with the french embassy to host the [thai-franco year of innovation](/e/yoi2023)
 
 ## 2022
