--- a/src/content/main/stories.mdx
+++ b/src/content/main/stories.mdx
@@ -1,49 +1,49 @@
 ## Hi there!
 
-My name is Chayapatr (or Pub, for short). I am an editor-in-chief at [Spaceth.co](https://spaceth.co), and a chief curator at [Creatorsgarten](https://creatorsgarten.org). Welcome to my personal site/dumpster fire 🔥
+My name is Chayapatr (or Pub, for short). I am an editor-in-chief at [Spaceth.co](/e/spaceth), and a chief curator at [Creatorsgarten](/e/creatorsgarten). Welcome to my personal site/dumpster fire 🔥
 
 <Gallery imgs={["spaceth.jpeg", "grtn.jpeg"]} />
 
 ## 2023
 
-- co-hosted [how to learn almost anything](/e/htlaa) with tk park and thaicom foundation
+- co-hosted [how to learn almost anything](https://www.eventpop.me/e/16060/learn) with tk park and thaicom foundation
 - co-created [thaiui](/e/thaiui) design system, a humanistic design system for thais
-- learned syntax and corpus lingustics at chulalongkorn university [[writeups](/e/ling)]
+- learned syntax and corpus lingustics at chulalongkorn university [[writeups](/e/uni/ling)]
 - co-initiated [garden zero](/e/g0) hacker space
-- organized [bangkok open source hackathon](/e/bosh), a 2-month long hackathon to promote open source culture in thailand
-- run [my first half-marathon](/e/hm)
-- partnered with the french embassy to host the [thai-franco year of innovation](/e/yoi2023)
+- organized [bangkok open source hackathon](https://chayapatr.medium.com/บันทึก-bangkok-open-source-hackathon-6d76b6d7d090), a 2-month long hackathon to promote open source culture in thailand
+- run [my first half-marathon](/e/run)
+- partnered with the french embassy to host the thai-franco year of innovation
 
 ## 2022
 
-- worked on [the codegolf party](/e/codegolf), a programming competition in a bar
-- translated the book [chasing new horizons](/e/chasing) (my first book translation!)
-- was a media partner of [the 73th international astronomical congress](/e/iac73) in paris.
-- hosted [superstition night](/e/scicart) in a science month, a meetup and panel discussion about history and philosophy of science at doc club and pub.
-- hosted [the sixth stupid hackathon in thailand](/e/sht6)
+- worked on [the codegolf party](https://creatorsgarten.org/event/golf1), a programming competition in a bar
+- translated the book [chasing new horizons](https://www.matichon.co.th/news-monitor/news_3892944) (my first book translation!)
+- was a media partner of [the 73th international astronomical congress](https://spaceth.co/iac-2022-paris/) in paris.
+- hosted [superstition night](https://creatorsgarten.org/event/scisart) in a science month, a meetup and panel discussion about history and philosophy of science at doc club and pub.
+- hosted [the sixth stupid hackathon in thailand](https://creatorsgarten.org/event/sht6)
 - co-founded the [creatorsgarten](/e/creatorsgarten) collective
 - tried to write my first book, failed miserably _sad face_
 
 ## 2021
 
-- started hosting [starstuff](/e/starstuff), a weekly podcast about space exploration and astronomy with thai public broadcasting service (thaipbs), has over 100 episodes now.
-- worked on [ai space challenge](/e/aispace)
-- wrote an analysis "[space movement 2060](/e/space2060)" with futuretales lab by mqdc
-- host [the 5th stupid hackathon thailand](/e/sht5)
-- worked on [the pds band contest](/e/pbc) concert at lido connect (again)
-- gave a [tedx talk](/e/tedx) at tedxutcc 2021
+- started hosting [starstuff](https://spaceth.co/category/podcast/starstuff/), a weekly podcast about space exploration and astronomy with thai public broadcasting service (thaipbs), has over 100 episodes now.
+- worked on [ai space challenge](https://thematter.co/brief/163714/163714)
+- wrote an analysis "space movement 2060" with futuretales lab by mqdc
+- host [the 5th stupid hackathon thailand](https://stupid.hackathon.in.th/5/)
+- worked on [the pds band contest](https://www.youtube.com/watch?v=R4MR2jVfOJI) concert at lido connect (again)
+- gave a tedx talk at tedxutcc 2021
 
 ## 2020
 
-- gave [my first public talk](/e/htbf2020) at hacktoberfest thailand 2020
-- sent [a dna storage to space](/e/messe) under a project called a molecular encoded storage to space exploration
-- help created on a theatrical play ["forgotten"](/e/forgotten) at lido connect, siam square
+- gave my first public talk at hacktoberfest thailand 2020
+- sent [a dna storage to space](https://freaklab.org/projects/messe/) under a project called a molecular encoded storage to space exploration
+- help created on a theatrical play ["forgotten"](https://chayapatr.medium.com/ไม่-forgotten-ในความทรงจำของเด็กมัธยมผู้สร้างละครเวที-87c9a7af2fb4) at lido connect, siam square
 
 ## 2019
 
 - started working with [spaceth.co](/e/spaceth)
-- was [a computer club president](/e/pdscc) of patumwan demonstration school
-- won [a bronze medal](/e/toi15) at the 15th thailand olympiad in informatics
+- was a computer club president of patumwan demonstration school
+- won [a bronze medal](https://chayapatr.medium.com/cat-t-shirt-6-คอมพิวเตอร์โอลิมปิกระดับชาติ-toi15-การจัดบ้านแบบคอนมาริกับเรื่องอื่น-ๆ-c9edfda1de63) at the 15th thailand olympiad in informatics
 
 ## 2017
 
