--- a/src/content/main/stories.mdx
+++ b/src/content/main/stories.mdx
@@ -2,7 +2,7 @@
 
 My name is Chayapatr (or Pub, for short). I am an editor-in-chief at [Spaceth.co](/e/spaceth), and a chief curator at [Creatorsgarten](/e/creatorsgarten). Welcome to my personal site/dumpster fire 🔥
 
-<Gallery imgs={["spaceth.jpeg", "grtn.jpeg"]} />
+<Gallery imgs={['spaceth.jpeg', 'grtn.jpeg']} />
 
 ## 2023
 
