--- a/src/content/main/crafts.mdx
+++ b/src/content/main/crafts.mdx
@@ -1,4 +1,4 @@
-## Codes
+## 💻 Codes
 
 - EventKit [wip]
 - ThaiUI [wip]
@@ -6,18 +6,18 @@
 - Contentgarten
 - Molecular Encoded Storage for Space Exploration (MESSE)
 
-## Contents
+## 💡 Contents
 
 - Starstuff
 - Chasing New Horizons
 - FutureTales Lab: Space Movement 2060
 
-## Communities
+## 🚀 Communities
 
 - Garden Zero
 - Bangkok Art Council [wip]
 
-## Event-based Projects
+## 🎆 Event-based Projects
 
 ![The 7th Stupid Hackathon in Thailand](/sht7.jpeg)
 **The 7th Stupid Hackathon in Thailand**
@@ -48,7 +48,7 @@
 - PDS Band Contest
 - Forgotten
 
-## Personal Side Projects
+## 🏝️ Personal Side Projects
 
 - TEA Interpreter [wip]
 - Algovisualizer [wip]
