--- a/src/content/main/stories.mdx
+++ b/src/content/main/stories.mdx
@@ -1,17 +1,17 @@
 ## Hi there!
 
-My name is Chayapatr (or Pub, for short). I am an editor-in-chief at [Spaceth.co](/e/spaceth), and a chief curator at [Creatorsgarten](/e/creatorsgarten). Welcome to my personal site/dumpster fire 🔥
+My name is Chayapatr (or Pub, for short). I am an editor-in-chief at [Spaceth.co](/g/spaceth), and a chief curator at [Creatorsgarten](/g/creatorsgarten). Welcome to my personal site/dumpster fire 🔥
 
 <Gallery imgs={['spaceth.jpeg', 'grtn.jpeg']} />
 
 ## 2023
 
-- co-hosted [how to learn almost anything](https://www.eventpop.me/e/16060/learn) with tk park and thaicom foundation
-- co-created [thaiui](/e/thaiui) design system, a humanistic design system for thais
-- learned syntax and corpus lingustics at chulalongkorn university [[writeups](/e/uni/ling)]
-- co-initiated [garden zero](/e/g0) hacker space
+- co-hosted [how to learn almost anything](https://www.eventpop.me/g/16060/learn) with tk park and thaicom foundation
+- co-created [thaiui](/g/thaiui), a humanistic design system for thais
+- learned syntax and corpus lingustics at chulalongkorn university [[writeups](/g/uni/ling)]
+- co-initiated [garden zero](/g/g0) hacker space
 - organized [bangkok open source hackathon](https://chayapatr.medium.com/บันทึก-bangkok-open-source-hackathon-6d76b6d7d090), a 2-month long hackathon to promote open source culture in thailand
-- run [my first half-marathon](/e/run)
+- run [my first half-marathon](/g/run)
 - partnered with the french embassy to host the thai-franco year of innovation
 
 ## 2022
@@ -21,7 +21,7 @@ My name is Chayapatr (or Pub, for short). I am an editor-in-chief at [Spaceth.co
 - was a media partner of [the 73th international astronomical congress](https://spaceth.co/iac-2022-paris/) in paris.
 - hosted [superstition night](https://creatorsgarten.org/event/scisart) in a science month, a meetup and panel discussion about history and philosophy of science at doc club and pub.
 - hosted [the sixth stupid hackathon in thailand](https://creatorsgarten.org/event/sht6)
-- co-founded the [creatorsgarten](/e/creatorsgarten) collective
+- co-founded the [creatorsgarten](/g/creatorsgarten) collective
 - tried to write my first book, failed miserably _sad face_
 
 ## 2021
@@ -41,7 +41,7 @@ My name is Chayapatr (or Pub, for short). I am an editor-in-chief at [Spaceth.co
 
 ## 2019
 
-- started working with [spaceth.co](/e/spaceth)
+- started working with [spaceth.co](/g/spaceth)
 - was a computer club president of patumwan demonstration school
 - won [a bronze medal](https://chayapatr.medium.com/cat-t-shirt-6-คอมพิวเตอร์โอลิมปิกระดับชาติ-toi15-การจัดบ้านแบบคอนมาริกับเรื่องอื่น-ๆ-c9edfda1de63) at the 15th thailand olympiad in informatics
 
