feat: minor redesign

--- a/src/content/main/crafts.mdx
+++ b/src/content/main/crafts.mdx
@@ -1,55 +1,103 @@
-## 💻 Codes
+## Codes & Creations
+- Bonfires.app (Prev. EventKit)
+- [ThaiUI](https://github.com/oseda/thaiui)
+- [Thai Open Source Ring](https://github.com/creatorsgarten/bosf23)
+- [Cluster.wiki](https://github.com/creatorsgarten/clusterwiki)
+- [Contentsgarten](https://github.com/creatorsgarten/contentsgarten) -- liquid-powered markdown-based content engine
+- [Molecular Encoded Storage for Space Exploration](https://github.com/spaceth/goldenrecord) (MESSE)
 
-- EventKit [wip]
-- ThaiUI [wip]
-- Cluster.wiki [wip]
-- Contentgarten
-- Molecular Encoded Storage for Space Exploration (MESSE)
+### Side-projects
+- Web for Fun
+- [TEA Interpreter](https://github.com/chayapatr/tea)
+- Algovisualizer [WIP]
+- [Ribbon Cutter Machine]()
+- [Century Per Dot](https://github.com/chayapatr/centuryperdot)
 
-## 💡 Contents
+## Selected Event-based Projects (a.k.a the ones I organized)
+See the full list at [/g/event](/g/event)
 
-- Starstuff
-- Chasing New Horizons
-- FutureTales Lab: Space Movement 2060
+### Hackathons & Code Competition
+- **Creatorsgarten/Thai Programmer Association/Bangkok Metropolitan Administration** · [Bangkok Open Source Hackathon](https://open.source.in.th)
+- **Creatorsgarten** · [The Stupid Hackathon Thailand](https://creatorsgarten.org/wiki/StupidHackTH) ([5th](https://stupid.hackathon.in.th/5)/[6th](https://stupid.hackathon.in.th/6)/[7th](https://stupid.hackathon.in.th/7))
+- **Creatorsgarten x Showdown.space** · CodeGolf Party
+- **ICECUBES/Space Zab/ENTIH/GranSystem** · [AI Space Challenge](https://www.icecubesservice.com/journal/ai-space-challenge-south-east-asia/)
+- Hackatrain -- a hackathon on a train
 
-## 🚀 Communities
+### Conferences, Workshops, Meetups
+- Javascript Bangkok 2024 [WIP] / BKK.JS [[Coverage]()]
+- **Creatorsgarten** · How to Learn (Almost) Anything ([Coverage](https://mappa.com)/[2023xThaicom Foundation & Thailand Knowledge Park](https://creatorsgarten.org/event/learn2)/[2022xUTCC](https://creatorsgarten.org/event/learn))
+- **Creatorsgarten** · Hacktoberfest Thailand Series [[Coverage](https://creatorsgarten.org/wiki/StupidHackTH)/[2023]()/[2021]()]
+- **Creatorsgarten** · Data-Driven Love [[Coverage]()]
+- **Creatorsgarten** · [Side projects Showdown](https://creatorsgarten.org/event/sideproject)
+- **Creatorsgarten x Bangkok Wittaya** · [Science Month's Superstition Night](https://creatorsgarten.org/event/scisart)
+- **Creatorsgarten x The Jam Factory** · [Biological Aesthetics of Nature](https://creatorsgarten.org/event/bio)
+- **Spaceth.co x Bangkok Design Week 2020** · [Design the Universe](https://spaceth.co/design)
 
-- Garden Zero
-- Bangkok Art Council [wip]
+## Content-based Projects
+- **Spaceth x FutureTales Lab** · [Futures of Space Movement in 2060](https://www.futuretaleslab.com/research/futureofspacemovement2060)
+- **Thai Public Broadcasting Service (ThaiPBS)** · Starstuff [[Podcast](https://podcasts.apple.com/th/podcast/starstuff-%E0%B9%80%E0%B8%A3-%E0%B8%AD%E0%B8%87%E0%B9%80%E0%B8%A5-%E0%B8%B2%E0%B8%88%E0%B8%B2%E0%B8%81%E0%B8%94%E0%B8%A7%E0%B8%87%E0%B8%94%E0%B8%B2%E0%B8%A7/id1588669089)/Radio] (108 Episodes)
+- **Sundogs/Matichon Publishing** · [Chasing New Horizons](https://www.matichonbook.com/p/4291/chasing-new-horizons-%E0%B8%A0%E0%B8%B2%E0%B8%A3%E0%B8%81%E0%B8%B4%E0%B8%88%E0%B8%9E%E0%B8%B4%E0%B8%8A%E0%B8%B4%E0%B8%95%E0%B8%94%E0%B8%B2%E0%B8%A7%E0%B8%9E%E0%B8%A5%E0%B8%B9%E0%B9%82%E0%B8%95.html) (Book Translation)
 
-## 🎆 Event-based Projects
+### Selected Coverages / Article
+- **The MATTER** · Open Source, from Code Sharing to Innovation [[Article](https://thematter.co/editorial/open-source/203976)]
+- **Spaceth.co** · Finding The Message from Thailand on the Moon [[Article](https://spaceth.co/goodwill)]
+- **Spaceth.co** · The 73th International Astronautical Congress Coverage [[Video]()] [[Article]()] (Media Partner)
+- **Spaceth.co** · Thai National Radio Telescope [[Video]()]
+- **Personal** · Can we seperate artworks from artists? [[Article]()]
+- **Personal** · Group Theory: Symmetry and 196,883 Dimensions Monster [[Article]()]
 
-![The 7th Stupid Hackathon in Thailand](/sht7.jpeg)
-**The 7th Stupid Hackathon in Thailand**
+### Selected Starstuff Episodes (Thai)
+- **EP.108** · [Open Source and Ingenuity]()
+- **EP.100** · [Sending fish to Space?]()
+- **EP.86** · [Cameras on the Moon]()
+- **EP.95** · [The Geography of Mars]()
+- **EP.56** · [Why Dinonaur Went Extinct?]()
+- **EP.25** · [What is Space Democratization?]()
 
-### Hackation & Competitions
+## Art, Stage works, and Exhibition
+- Bangkok Design Week 2024 (Untitied) [WIP]
+- Untitied Forum [WIP]
+- Untitied Algorave [WIP]
+- **Bangkok Art and Culture Center** · [The Magic Exhibition]() (Miracle of Life)
+- **Science Communication Week 2023** (Spaceth.co)
+- **Bangkok CityCity Gallery** · Bring Your Own Beamer 2022 (Projection x tomorrow.Lab)
+- **Ars Electronica 2021: In Kepler's Garden** ([MESSE](https://ars.electronica.art/keplersgardens/de/messe/))
+- **Bangkok Design Week 2021** ([MESSE](https://freaklab.org/projects/messe/))
+- [Forgotten](https://chayapatr.medium.com/%E0%B9%84%E0%B8%A1%E0%B9%88-forgotten-%E0%B9%83%E0%B8%99%E0%B8%84%E0%B8%A7%E0%B8%B2%E0%B8%A1%E0%B8%97%E0%B8%A3%E0%B8%87%E0%B8%88%E0%B8%B3%E0%B8%82%E0%B8%AD%E0%B8%87%E0%B9%80%E0%B8%94%E0%B9%87%E0%B8%81%E0%B8%A1%E0%B8%B1%E0%B8%98%E0%B8%A2%E0%B8%A1%E0%B8%9C%E0%B8%B9%E0%B9%89%E0%B8%AA%E0%B8%A3%E0%B9%89%E0%B8%B2%E0%B8%87%E0%B8%A5%E0%B8%B0%E0%B8%84%E0%B8%A3%E0%B9%80%E0%B8%A7%E0%B8%97%E0%B8%B5-87c9a7af2fb4) (Stage Play) at Lido Connect
 
-- Bangkok Open Source Hackathon
-- CodeGolf Party
-- AI Space Challenge
-- Stupid Hackathon Thailand Series
+## Initiatives and Communities
+- [Garden Zero]() and G0 Club
+- [Bangkok Open Source Initiative]()
 
-### Antidisciplinary Meetups
+## Talks & Panels
+- **FutureTales Lab x Spaceth.co** · Space 2060 Night at True Digital Park
+- **Xtober.23** · Make Coding Less Scary [[Live]()]
+- **Learning Fest 23 Bangkok** · Secret Guest on the Board [[Post](https://learningfest.tkpark.or.th/program/lf38_secret-guest-on-board-sat/)]
+- **CSS Meetup** · ThaiUI Designing an Accessible Design System for Thais
+- **Space Pioneer Accelerating Regional Convention (SPARC)** · [Intro to Space and Beyond](https://www.instagram.com/p/Cty58tlSMqf/) / [Space Movement 2060](https://www.instagram.com/p/CuGuqojyydB/) [[Live](https://www.facebook.com/thesparcevent)]
+- **Functional Programming Meetup** · Tortilla Endofunctors, and More Jokes about Monads [[Video]()]
+- **Thai Programmer Association** · Bangkok Open Source Hackathon [[Live]()]
+- **National Book Fair 2023 / Matichon / Sundogs** · Science Odyssey ปรากฏการณ์หนีตามวิทยาศาสตร์ [[Video]()]
+- **Bangkok CityCity Gallery** ·A Conversation with the Sun: Book Club
+- **Knowledge Book Fair at Museum Siam** · Mystery in the Universe [[Post](https://www.instagram.com/p/CoKvNhyPIGU/)]
+- **ITx Hacktoberfest 2022** · GPT-3, Typography, and other stories [[Live]()]
+- **TEDxUTCC 2021** · How to drink bubble tea or (finding the underlying patterns of the universe)
+- **Bangkok CityCity Gallery** · they dig into the soil and talk by the hole [[Video]()]
+- **Sophia Publishing** · Reality is not what it seems opening panel [[Video]()]
+- **Hacktoberfest Thailand 2020** · Building an open source dna storage algorithm for a space mission [[Video]()]
 
-- Sciยศาสตร์ Night
-- Biological Aesthetics of Nature
-- How to Learn Almost Anything (2022/2023)
-- Design the Universe
+## Interviews & Recognitions
+- **Sarakadee Magazine** · นิตยสาร สารคดี ฉบับที่ 449 สิงหาคม 2565 Space Mission
+- **The People** · การศึกษาไทยพัฒนาอุตสาหกรรมอวกาศได้แค่ไหน ฟังมุมมองจากผู้ทำสื่อ SPACETH.CO
+- **IPST** · The 15th Thailand Olympiad in Informatics (Bronze Medal)
+- **Mahidol University** · Mahidol Science Communicator Award 2022
+- **The People** · People of the year award 2022
 
-### Technology and Software Engineering
-
-- Side Projects Showdown
-- Creative Coding Series
-- Hacktoberfest Thailand Series (2019-Present)
-
-### Arts and Lives
-
-- Algorave [wip]
-- PDS Band Contest
-- Forgotten
-
-## 🏝️ Personal Side Projects
-
-- TEA Interpreter [wip]
-- Algovisualizer [wip]
-- Century Per Dot [wip]
+## Teachings & Lectures
+- **Guest Lecturer** · "Introduction to Space", Sirindhorn International Institute of Technology (SIIT), Thammasat University (2023)
+- **Mentor** · Multimedia class, School of Information Technology, King Mongkut's Institute of Technology (2022)
+- **Guest Lecturer** · "Science Communication for Life Sciences", Mahidol University (2021)
+- **Teacher** · Python, a meek introduction (2021/Side project) [[Playlist]()]
+- **Guest Lecturer** · “Space and Lunar Exploration for Architect”, Bangkok University in Collaboration with SpaceZab (2020)
+- **Guest Lecturer** · The Promotion of Academic Olympiad and Development of Science Education Foundation's Computer Camp at Satri Mahapruttharam School (2019)
+- **Storytelling Class Teacher** · Saturday School Project at Wat Pathum Wanaram School (2019)
