--- a/src/content/main/stories.mdx
+++ b/src/content/main/stories.mdx
@@ -1,50 +1,23 @@
-## Hi there!
+My name is Chayapatr (or Pub, for short). I'm an interdisciplinary maker and creative technologist based in Bangkok, Thailand. Welcome to my site!
 
-My name is Chayapatr (or Pub, for short). I am an editor-in-chief at [Spaceth.co](/g/spaceth), and a chief curator at [Creatorsgarten](/g/creatorsgarten). Welcome to my personal site/dumpster fire 🔥
+## Exploring Connectivities
+
+Since 2021, I have worked as a curator for [Creatorsgarten](https://creatorsgarten), an initiative I co-founded to accelerate the growth of maker culture in Thailand by connecting communities through meaningful gatherings and projects. With more than thousands of active members and tenth of community partners from different areas, we seek to make creativity and creation more accessible for all.
 
 <Gallery imgs={['spaceth.jpeg', 'grtn.jpeg']} />
 
-## 2023
+I also work as editor-in-chief at [Spaceth.co](https://spaceth.co), a media focused on science and space exploration in Thaialnd with 500,000 followers. Through the media and collaborations with partners both in public and private sectors, I seek to raise awareness about importance of science and advocate the democratize of space in Thailand and Southeast Asia.
 
-- co-hosted [how to learn almost anything](https://www.eventpop.me/g/16060/learn) with tk park and thaicom foundation
-- co-created [thaiui](/g/thaiui), a humanistic design system for thais
-- learned syntax and corpus lingustics at chulalongkorn university [[writeups](/g/uni/ling)]
-- co-initiated [garden zero](/g/g0) hacker space
-- organized [bangkok open source hackathon](https://chayapatr.medium.com/บันทึก-bangkok-open-source-hackathon-6d76b6d7d090), a 2-month long hackathon to promote open source culture in thailand
-- run [my first half-marathon](/g/run)
-- partnered with the french embassy to host the thai-franco year of innovation
+In a more personal side, I do coding (mostly in JavaScript -- for applied computing), working on art and civic projects, exploring [lingustics](/ling), contemporary philosophy, digital humanities, and more.
 
-## 2022
+Through these experinces, I aim to explore the dynamics and aspects of meaningful connectivities between humans, communities, and machines.
 
-- worked on [the codegolf party](https://creatorsgarten.org/event/golf1), a programming competition in a bar
-- translated the book [chasing new horizons](https://www.matichon.co.th/news-monitor/news_3892944) (my first book translation!)
-- was a media partner of [the 73th international astronomical congress](https://spaceth.co/iac-2022-paris/) in paris.
-- hosted [superstition night](https://creatorsgarten.org/event/scisart) in a science month, a meetup and panel discussion about history and philosophy of science at doc club and pub.
-- hosted [the sixth stupid hackathon in thailand](https://creatorsgarten.org/event/sht6)
-- co-founded the [creatorsgarten](/g/creatorsgarten) collective
-- tried to write my first book, failed miserably _sad face_
+ ## Selected Projects
+ <Gallery imgs={['forgotten.webp', 'scisart.jpeg', 'messe.jpeg', 'sht7.jpeg']} />
+ Please see more on [/craft](/craft)
 
-## 2021
+ ## Links
+ [Digital Garden](/g) | [Personal Blog](https://chayapatr.medium.com) | Social Profiles ([FB]()/[X]()/[Letterboxd]()) | [Github]()
 
-- started hosting [starstuff](https://spaceth.co/category/podcast/starstuff/), a weekly podcast about space exploration and astronomy with thai public broadcasting service (thaipbs), has over 100 episodes now.
-- worked on [ai space challenge](https://thematter.co/brief/163714/163714)
-- wrote an analysis "space movement 2060" with futuretales lab by mqdc
-- host [the 5th stupid hackathon thailand](https://stupid.hackathon.in.th/5/)
-- worked on [the pds band contest](https://www.youtube.com/watch?v=R4MR2jVfOJI) concert at lido connect (again)
-- gave a tedx talk at tedxutcc 2021
-
-## 2020
-
-- gave my first public talk at hacktoberfest thailand 2020
-- sent [a dna storage to space](https://freaklab.org/projects/messe/) under a project called a molecular encoded storage to space exploration
-- help created on a theatrical play ["forgotten"](https://chayapatr.medium.com/ไม่-forgotten-ในความทรงจำของเด็กมัธยมผู้สร้างละครเวที-87c9a7af2fb4) at lido connect, siam square
-
-## 2019
-
-- started working with [spaceth.co](/g/spaceth)
-- was a computer club president of patumwan demonstration school
-- won [a bronze medal](https://chayapatr.medium.com/cat-t-shirt-6-คอมพิวเตอร์โอลิมปิกระดับชาติ-toi15-การจัดบ้านแบบคอนมาริกับเรื่องอื่น-ๆ-c9edfda1de63) at the 15th thailand olympiad in informatics
-
-## 2017
-
-- learn how to sail a laser sail
+ ![Desk](/bg.jpg)
+ -- (Me in 1 picture?)
