style: minor style fix

--- a/src/content/main/stories.mdx
+++ b/src/content/main/stories.mdx
@@ -19,5 +19,5 @@ Through these experinces, I aim to explore the dynamics and aspects of meaningfu
  ## Links
  [Digital Garden](/g) | [Personal Blog](https://chayapatr.medium.com) | Social Profiles ([FB]()/[X]()/[Letterboxd]()) | [Github]()
 
- ![Desk](/bg.jpg)
+ ![Desk](/bg.webp)
  -- (Me in 1 picture?)
