--- a/src/content/g/1p24.md
+++ b/src/content/g/1p24.md
@@ -1,7 +1,7 @@
 ---
 title: One Paper Per Day 2024
 main: true
-pubDate: 1 Jan 2024
+pubDate: 1 Jan 24
 ---
 
 > This year's mission to read one book per week failed miserably; it was wayyyy too hard. Let's read one paper per day instead next year. - Pub (31/12/23)
@@ -10,4 +10,4 @@ pubDate: 1 Jan 2024
 
 ## Week 1
 
-- [Day 1: A Single Vector Is Not Enough: Taxonomy Expansion via Box Embeddings | WWW'23 [Open Access]](/s/1p24-1)
+- [Day 1: A Single Vector Is Not Enough: Taxonomy Expansion via Box Embeddings | WWW'23 [Open Access]](/g/1p24-1)
