--- a/src/content/g/1p24-1.md
+++ b/src/content/g/1p24-1.md
@@ -1,8 +1,7 @@
 ---
 title: One Paper Per Day 2024 (1/366)
-pubDate: 1 Jan 2024
+pubDate: 1 Jan 24
 ---
-
 ## A Single Vector Is Not Enough: Taxonomy Expansion via Box Embeddings
 
 ACM Web Conference 2023 (WWW'23)\
@@ -15,6 +14,9 @@ Taxonomy (or, in another term, hierarchical classification) is used in many matt
 But the problem arises in this era where information is exponentially growing; it's nearly impossible to do taxonomy by hand (imagine people arranging consistent product categories on Amazon, one item at a time). Creating an autonomous system is becoming more and more necessary.
 
 One typically used method is embedding, i.e., turning words into vectors in vector space (or, in common parlance, a point in space. You might imagine that in a graph). Similar things will be close to each other, like the words "king" and "palace," "space" and "rocket," and such (note: what's fun is that when vectors are just lists of numbers, We can also add and subtract the embedding values of the words -> as in the classic example `"king" - "man" + woman ~= "queen"`).
+
+![taxonomy](https://imgs.from.pub/boxtaxi.jpg)
+Image Credit: Jiang et al.
 
 However, the paper discusses that since a vector is just a point, doing a taxonomy by measuring the distance between each point (each keyword -- bottom left picture) doesn't make that much sense because the vector point has a "symmetric relation." In contrast, the main feature of taxonomy is an "asymmetric relation" -- because one point should be the parent of another, e.g., `a bird (parent) -> pigeon (child)`, which it cannot represent using only the likeness function between the two.
 
