feat: persistent store

--- a/src/content/g/1p24-1.md
+++ b/src/content/g/1p24-1.md
@@ -9,7 +9,7 @@ ACM Web Conference 2023 (WWW'23)\
 
 As in the name, this paper discusses taxonomy, a.k.a. the topic I'm very interested in right now (haha) regarding information science and classification.
 
-Taxonomy (or, in another term, hierarchical classification) is used in many matters—from traditional science domains (as in biology) to various things in our daily lives, like shopping; for example, we may look at the categories of products organized on web stores as taxonomy, such as: `electronic equipment -> household items -> air conditioners`
+Taxonomy (or, in another term, hierarchical classification) is used in many matters—from traditional science domains (as in biology) to various things in our daily lives, like shopping; for example, we may look at the categories of products organized on web stores as taxonomy, such as `electronic equipment -> household items -> air conditioners.`
 
 But the problem arises in this era where information is exponentially growing; it's nearly impossible to do taxonomy by hand (imagine people arranging consistent product categories on Amazon, one item at a time). Creating an autonomous system is becoming more and more necessary.
 
@@ -20,8 +20,8 @@ Image Credit: Jiang et al.
 
 However, the paper discusses that since a vector is just a point, doing a taxonomy by measuring the distance between each point (each keyword -- bottom left picture) doesn't make that much sense because the vector point has a "symmetric relation." In contrast, the main feature of taxonomy is an "asymmetric relation" -- because one point should be the parent of another, e.g., `a bird (parent) -> pigeon (child)`, which it cannot represent using only the likeness function between the two.
 
-What the paper suggests is to do embedding and, instead of using the values directly, convert them into "boxes" (box) -- or in a more jargon-y term, "Hyperrectangle" -- first (like in the picture below right). Therefore, we can find each keyword's parent/child nature using the size property of boxes. For example, if Box A is in Box B, we can conclude that Box B is the parent of Box A.
+What the author suggests is to do embedding and, instead of using the values directly, convert them into "boxes" -- or in a more jargon-y term, "Hyperrectangle" -- first (like in the picture below right). Therefore, we can find each keyword's parent/child nature using the size property of boxes. For example, if Box A is in Box B, we can conclude that Box B is the parent of Box A.
 
-As for details on how to convert embedding into a box or how to create a whole system, you can read it yourself. But it's surely a fun read.
+As for details on how to convert embedding into a box or how to create a whole system, you can read it yourself. But it's undoubtedly a fun read.
 
 [Original Post (Thai version) ↗](https://www.facebook.com/photo.php?fbid=2260353797502268)
