--- a/src/content/g/1p24-2.md
+++ b/src/content/g/1p24-2.md
@@ -4,6 +4,35 @@ pubDate: 2 Jan 24
 ---
 ## Historiographies of Hypertext
 
-*ACM Hypertext 2023 (HT'23)*
+*ACM Hypertext 2023 (HT'23)*\
 [Link [Open Access]](https://dl.acm.org/doi/10.1145/3603163.3609038)
 
+Yesterday's paper was very techy -- let's dive into a more social science side for today. The piece I picked up is called "A Study of the History of Hypertext." Indeed, it is not a typo: the actual term used in this article is "Historiographies," which can be translated into Thai as "ประวัติศาสตร์นิพนธ์." Suppose it were to be broadly summarized, as mentioned above: it is "The study of the study of history," which, from many viewpoints, can be viewed as a process of creating a systematic method for studying history.
+
+***Let me summarize this using the two keywords of the paper: "Historiography" and "Hypertext."***
+
+### 1. Historiography
+
+I should start with an oversimplified warning (haha).
+
+So, many schools of thought in modern social science studies view traditional history as over-reductionistic; that is, the process of historical analysis reduces the details of actual phenomena. By which to create a storyline that is "a straight line" (linearity) or causality of events.
+
+For example, the common narrative regarding the early history of space exploration during the Cold War might be that "Kennedy was the presidential candidate from Democrats in the 1960s who criticized the policies of Eisenhower, the previous Republican president, for reducing the importance of the military and technological development and causing a "gap*" of development when Compared to the Soviet side. Then, when he became president, he accelerated the development of science by making the space program one of his important tasks".
+
+`(*) or to be more accurate, the missile gap - see, this one is actually reductive as well -> for more extensive details in that topic, please take a look at my article on [Spaceth](https://spaceth.co/moon-politics)`
+
+But by looking deeper, you will see that this narrative is only partially true. For example, you will see an analysis of the emphasis on the development of the military and technology, including attacks on the Republican side about the missile gap, as a campaign tactic rather than an actual idea. This is reinforced by many records showing that during the first 100 days after taking office, "Of all the problems he is facing, Space was perhaps the subject he least knew about," in which Kennedy was reluctant to pursue or abandon the projects on many occasions.
+
+To summarize, we can see that much of history is not linear. But there is complexity or nonlinearity of events that also do not have a direct cause-effect. The historiography approach can thus be seen as an attempt to study history. Through another study of historical works -- or it could be said simply as metaanalysis -- to try to come out of the narrative and look at its meta-level instead // which, if we speak analytically, ultimately cannot come out. It's entirely reductive anyway; however, we see it as an attempt or a process trying to handle this better.
+
+### 2. Hypertext
+
+So, for the second keyword, what is hypertext? A brief definition of hypertext is the idea of extending 'text.' One major topic around this concept is the representation of nonlinearity within datasets by branching out text into another text through a hyperlink. Let me give you an example: the core concept of Wikipedia revolves around hypertext, in which the data set is not organized into a single linear story but gradually branches out.
+
+The fun punchline of this work is that it is a historiographic work -- a process trying to transcend the "linearity" of historical narrative -- that is being applied to the history of hypertext, i.e., a tool that attempts to transcend the "linearity" of data.
+
+The paper meta-analyzes the history and the historical datasets created and stored around hypertext,  from the point of term coining (which, funny enough, is already vague) until the development up to the present era.
+
+For me, the exciting idea for this one is about the process. As for the in-depth content about history, you can read it in the full paper, which is open access like yesterday's.
+
+Note: I brought this one up because hypertext excites me a lot lately. If you dig deep into it, you'll see the multidimensionality of that topic: one straightforward idea is around the methods of representing the nonlinearity of information and how we can extend them more than what is done by hypertexts, which many discuss that it does not erase enough linearity from information but just creating a multilinear representation instead. Or, in the more applicational layer, viewing Wikipedia as a massive-scale collaborative hypertext cluster can reflect many aspects of society and information: what can we do about that?
