--- a/src/content/g/1p24.md
+++ b/src/content/g/1p24.md
@@ -11,3 +11,4 @@ pubDate: 1 Jan 24
 ## Week 1
 
 - [Day 1: A Single Vector Is Not Enough: Taxonomy Expansion via Box Embeddings | WWW'23 [Open Access]](/g/1p24-1)
+- [Day 2: Historiographies of Hypertext | HT'23 [Open Access]](/g/1p24-2)
