--- a/src/content/g/1p24-2.md
+++ b/src/content/g/1p24-2.md
@@ -7,7 +7,7 @@ pubDate: 2 Jan 24
 *ACM Hypertext 2023 (HT'23)*\
 [Link [Open Access]](https://dl.acm.org/doi/10.1145/3603163.3609038)
 
-Yesterday's paper was very techy -- let's dive into a more social science side for today. The piece I picked up is called "A Study of the History of Hypertext." Indeed, it is not a typo: the actual term used in this article is "Historiographies," which can be translated into Thai as "ประวัติศาสตร์นิพนธ์." Suppose it were to be broadly summarized, as mentioned above: it is "The study of the study of history," which, from many viewpoints, can be viewed as a process of creating a systematic method for studying history.
+Yesterday's paper was very techy -- let's dive into a more social science side for today. The piece I picked up is called "Historiographies of Hypertext," or in layman's terms: "A study about a study about the history of hypertext." Indeed, it is not a typo: the actual term used in this article is "Historiographies," which can be translated into Thai as "ประวัติศาสตร์นิพนธ์." Suppose it were to be broadly summarized, as mentioned above: it is "The study of the study of history," which, from many viewpoints, can be viewed as a process of creating a systematic method for studying history.
 
 ***Let me summarize this using the two keywords of the paper: "Historiography" and "Hypertext."***
 
