--- a/src/content/g/1p24-1.md
+++ b/src/content/g/1p24-1.md
@@ -5,7 +5,7 @@ pubDate: 1 Jan 24
 ## A Single Vector Is Not Enough: Taxonomy Expansion via Box Embeddings
 
 ACM Web Conference 2023 (WWW'23)\
-[Link [Open Access]](https://dl.acm.org/doi/10.1145/3543507.3583310)
+[ACM Digital Library [Open Access]](https://dl.acm.org/doi/10.1145/3543507.3583310)
 
 As in the name, this paper discusses taxonomy, a.k.a. the topic I'm very interested in right now (haha) regarding information science and classification.
 
@@ -24,4 +24,4 @@ What the author suggests is to do embedding and, instead of using the values dir
 
 As for details on how to convert embedding into a box or how to create a whole system, you can read it yourself. But it's undoubtedly a fun read.
 
-[Original Post (Thai version) ↗](https://www.facebook.com/photo.php?fbid=2260353797502268)
+[Facebook Post (Thai) ↗](https://www.facebook.com/photo.php?fbid=2260353797502268)
