--- a/src/content/g/1p24-2.md
+++ b/src/content/g/1p24-2.md
@@ -5,7 +5,7 @@ pubDate: 2 Jan 24
 ## Historiographies of Hypertext
 
 *ACM Hypertext 2023 (HT'23)*\
-[Link [Open Access]](https://dl.acm.org/doi/10.1145/3603163.3609038)
+[ACM Digital Library [Open Access]](https://dl.acm.org/doi/10.1145/3603163.3609038)
 
 Yesterday's paper was very techy -- let's dive into a more social science side for today. The piece I picked up is called "Historiographies of Hypertext," or in layman's terms: "A study about a study about the history of hypertext." Indeed, it is not a typo: the actual term used in this article is "Historiographies," which can be translated into Thai as "ประวัติศาสตร์นิพนธ์." Suppose it were to be broadly summarized, as mentioned above: it is "The study of the study of history," which, from many viewpoints, can be viewed as a process of creating a systematic method for studying history.
 
@@ -36,3 +36,5 @@ The paper meta-analyzes the history and the historical datasets created and stor
 For me, the exciting idea for this one is about the process. As for the in-depth content about history, you can read it in the full paper, which is open access like yesterday's.
 
 Note: I brought this one up because hypertext excites me a lot lately. If you dig deep into it, you'll see the multidimensionality of that topic: one straightforward idea is around the methods of representing the nonlinearity of information and how we can extend them more than what is done by hypertexts, which many discuss that it does not erase enough linearity from information but just creating a multilinear representation instead. Or, in the more applicational layer, viewing Wikipedia as a massive-scale collaborative hypertext cluster can reflect many aspects of society and information: what can we do about that?
+
+[Facebook Post (Thai) ↗](https://www.facebook.com/chayapatr/posts/pfbid02i9XGyMcFopbFWKwvrT6uWZkLAXG2HssSWF8JrJoeuZePaJeZCMrFKjdt4dtsFp3il)
