--- a/src/content/g/1p24.md
+++ b/src/content/g/1p24.md
@@ -12,5 +12,5 @@ pubDate: 1 Jan 24
 
 - [Day 1: A Single Vector Is Not Enough: Taxonomy Expansion via Box Embeddings | WWW'23 [Open Access]](/g/1p24-1)
 - [Day 2: Historiographies of Hypertext | HT'23 [Open Access]](/g/1p24-2)
-- [Day 3: Uninventing the Bomb? | Medicine, Conflict and Survival]
-- [Day 4: Hate Speech in Political Discourse: A Case Study of UK MPs on Twitter | HT'21]
+- [Day 3: Uninventing the Bomb? | Medicine, Conflict and Survival](/g/1p24-3)
+- [Day 4: Hate Speech in Political Discourse: A Case Study of UK MPs on Twitter | HT'21](/g/1p24-4)
