docs: minor edit

--- a/src/content/g/1p24-4.md
+++ b/src/content/g/1p24-4.md
@@ -9,7 +9,7 @@ ACM Conference on Hypertext and Social Media 2021 (HT'21)\
 
 Today's piece is quite straightforward -- it's a study of hate speeches toward members of the British Parliament.
 
-The paper scrapes tweets (when it was still Twitter, haha) roughly 2.5 million tweets from 1.25 million threads containing conversations between MP and non-MP users (scraping the whole thread for more contextual data)
+The paper scrapes roughly 2.5 million tweets (when it was still Twitter, haha) from 1.25 million threads containing conversations between MP and non-MP users (scraping the whole thread for more contextual data)
 
 Overall, the 2.5 million tweets contained conversations from 533 of the 650 MPs (82%), a large number that reflects the role of social media in political communication today (as the authors noted).
 
@@ -17,7 +17,7 @@ The major part of this paper is the analysis of the data -- the authors initiall
 
 After separating the topic, each tweet was put into 18 separate classifiers to analyze whether the tweet was hate speech. The results for each tweet are counted on how many of the classifiers agreed (n), in other words, separated into bins according to number n. The average scores for each bin are then measured. Using the toxicity score of 0.8 recommended by Google Perspective API, the data from the bins with n=9 are classified as harmful.
 
-After filtering only tweets that contain hate speech, the characteristics of the tweets are observed, using additional contexts from the topic of discussion and issue to the MP's personal data and the party that the MP belongs to, several characteristics emerge, for example:
+The characteristics of the tweets are observed after filtering only tweets that contain hate speech. Using additional contexts from the topic of discussion and issue to the MP's personal data and the party that the MP belongs to, several characteristics emerge, for example:
 
 - It was found that MPs who are from Ethnic-Minority Groups or women experience a higher proportion of hate speech than white people or men.
 - It was found that the conservative party (which is in government) received the most hate speech.
